# ods

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
api/: README.md  pyproject.toml
api/bruno/: Infer Text.bru  Retrain Model.bru  collection.bru
api/src/bi_server/: app.py
api/src/bi_server/db/: models.py  state.py
api/src/bi_server/dto/: train.py
api/src/bi_server/ml/: model.py
api/src/bi_server/service/: ml_model.py
bruno/: Infer Text.bru  Retrain Model.bru  collection.bru
src/bi_server/: config.py
src/bi_server/ml/: service.py  state.py
web/: README.md  pyproject.toml
web/src/web_ui/: app.py
